# spreed-pdf

./: .dockerignore  .gitignore  Dockerfile  README.md  crontab.example  docker-compose.yml  example.env  pyproject.toml
api/: main.py  schemas.py  settings.py  utils.py
api/routes/: __init__.py  checkout.py  webhooks.py
assets/: auditoria.css  auditoria.html  auditoria_template.html
db/: __init__.py  models.py  session.py
migrations/: env.py
migrations/versions/: 0001_create_webhook_requests.py  56bbe7fdd5ab_add_charge_model.py  7a43352f2082_add_lead_model.py  abe3a969bc05_add_expires_at_to_charge.py  fb5ab4c2c985_add_ploomes_ids_to_charge.py
scripts/: init-db.sh  run_export.sh  setup_cronjob.sh
templates/: app.js  checkout.html  payment.html  payment.js  styles.css
workers/: __init__.py  export_leads.py  pdf_gen.example.py  tasks.py
workers/services/: __init__.py  botconversa.py  gdrive.py  openai_client.py  ploomes.py  woovi.py
